[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI_Scenes/InventoryBar.gd" type="Script" id=1]
[ext_resource path="res://assets/platformer/Bottom Bar.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/arrow_up.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/arrow_down.png" type="Texture" id=5]

[sub_resource type="Theme" id=1]
ScrollContainer/styles/bg = null

[node name="InventoryPanel" type="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -961.0
margin_top = -181.0
margin_right = -1.0
margin_bottom = -1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Node2D"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 960.0
margin_bottom = 180.0
mouse_filter = 2
texture = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 25.0
margin_right = 951.0
margin_bottom = 167.0
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Node2D/MarginContainer"]
unique_name_in_owner = true
margin_right = 807.0
margin_bottom = 142.0
mouse_filter = 2
theme = SubResource( 1 )
scroll_horizontal_enabled = false

[node name="InventoryGrid" type="GridContainer" parent="Node2D/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
mouse_filter = 2
custom_constants/vseparation = 30
custom_constants/hseparation = 35
columns = 5

[node name="UpArrow" type="TextureButton" parent="Node2D"]
margin_left = 27.0
margin_top = 30.0
margin_right = 107.0
margin_bottom = 77.0
texture_normal = ExtResource( 4 )

[node name="DownArrow" type="TextureButton" parent="Node2D"]
margin_left = 27.0
margin_top = 94.0
margin_right = 107.0
margin_bottom = 141.0
texture_normal = ExtResource( 5 )

[connection signal="pressed" from="Node2D/UpArrow" to="." method="_on_UpArrow_pressed"]
[connection signal="pressed" from="Node2D/DownArrow" to="." method="_on_DownArrow_pressed"]
